# clevo-fan-control

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  clevo-fan-control  faninstall.sh
src/: clevo-fan-control.c  clevo-fan-control.desktop  main.c
